Sun Dec 22 23:30:12 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): Initialize the mandata struct
	  on the stack to zero.
	  (count_glob_matches): Likewise.
	* src/straycats.c (check_for_stray): Likewise.
	* src/man.c (try_section): Use infoalloc() (which initializes the
	  mandata struct to zero) rather than malloc(). This had caused
	  several uses of uninitialized memory (Debian bug #168584).

	* src/check_mandirs (purge_whatis): Compare info->pointer against
	  "-", not just its first character.

Sun Dec 22 19:29:38 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.1.
	* docs/NEWS, man-db.gnu, man-db.lsm: Update.

Sun Dec 22 18:19:09 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c (btree_findkey): Cast key.dsize to int when using
	  it as an fprintf() field width.

Sun Dec 22 18:15:51 GMT 2002  Colin Watson  <cjwatson@debian.org>

	Patch inspired by part of SuSE's diff, although not identical.

	* GNUmakefile.in: Export DESTDIR.
	* man/Makefile.in, src/Makefile.in, zsoelim/Makefile.in: Honour
	  DESTDIR when installing and uninstalling files.

Sun Dec 22 14:14:37 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Don't update .po files automatically, since
	  they're kept under revision control.

Sun Dec 22 13:59:23 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po, po/pt_BR.po, po/sv.po: Update with msgmerge.

Sun Dec 22 13:44:20 GMT 2002  Alexandre Folle de Menezes  <afmenez@terra.com.br>

	* po/pt_BR.po: Update from Translation Project.

Sat Dec 21 13:30:43 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (count_glob_matches): Exclude file names which
	  fail stat(), such as dangling symlinks.

Sat Dec 21 03:01:34 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (count_glob_matches): New function,