@@ -49,6 +49,9 @@ and word boundaries in the description.
 .B \-d, \-\-debug
 Print debugging information.
 .TP
+.B \-v, \-\-verbose
+Print verbose warning messages.
+.TP
 .B \-r, \-\-regex
 Interpret each keyword as a regular expression.
 This is the default behaviour.
