@@ -63,6 +63,9 @@ is a manual page hierarchy such as
 .B \-d, \-\-debug
 Print debugging information.
 .TP
+.B \-v, \-\-verbose
+Print verbose warning messages.
+.TP
 .B \-r, \-\-regex
 Interpret each 
 .I name 
