@@ -1,3 +1,14 @@
+Sun Dec 29 19:40:46 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	Patch partly by Werner Fink <werner@suse.de>.
+
+	* src/whatis.c (args, long_options): Add -v/--verbose option.
+	  (usage): Document it.
+	  (get_whatis): Print pointer loop warnings only if --verbose.
+	  (main): Handle --verbose option.
+	* man/man1/apropos.man1 (OPTIONS): Document --verbose.
+	* man/man1/whatis.man1 (OPTIONS): Likewise.
+
 Sun Dec 22 23:30:12 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (test_manfile): Initialize the mandata struct
